package actions;
public class Speech extends Enum {
    Tell,
    Ask
}