package actions;

import world.heroes.Person;

public interface Loving {
    public void love(Person person);
}
